# LeadGenAI

./: LeadGenAI.ipynb  README.md  pyproject.toml
media/email_templates/: 1.md  2.md
src/: app.py  constants.py  util.py
src/models/: lead.py
studio/: langgraph.json  lead_generator.py  loader.py  requirements.txt
