[tool.poetry]
name = "leadgenai"
version = "0.1.0"
description = ""
authors = ["Ganesh Rao <mister.xrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.1.24"
typer = "^0.12.5"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
langchain-google-genai = "^1.0.10"
langgraph = "^0.2.20"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
